--- a/PyRods/CHANGES
+++ b/PyRods/CHANGES
@@ -53,3 +53,12 @@
 * 3.3.0:
   - Switch to iRODS 3.3
 
+* 3.3.1:
+  - Correct malloc issues in obj.i
+  - Add setPassword() for user
+
+* 3.3.2:
+  - Add lastStatus global variables
+
+* 3.3.3:
+  - Correct default resources associated when opening/creating a file
